[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imef"
version = "0.0.0"
authors = [
  { name="Matthew Argall", email="matthew.argall@unh.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.23.5",
    "xarray==2023.6.0",
    "scipy==1.11.4",
    "tqdm==4.65.0",
    "requests==2.31.0",
    "matplotlib==3.8.0",
    "pandas==2.1.4",
    "scikit-learn==1.3.2",
    "nasa-pymms==0.4.6",
    "bs4>=0.0.1",
    "heliopy==0.15.0",
    "sunpy==5.1.0",
    "astropy==6.0.0"
]

[project.urls]
Homepage = "https://github.com/argallmr/imef"
Issues = "https://github.com/argallmr/imef/issues"